--- a/app/src/main/res/layout-sw600dp/item_recycler_view.xml
+++ b/app/src/main/res/layout-sw600dp/item_recycler_view.xml
@@ -12,7 +12,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
-            android:textSize="20sp"
+            android:textSize="35sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.025"
@@ -22,14 +22,15 @@
             tools:text="2" />
 
     <TextView
-
             android:id="@+id/text_device_id"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:gravity="center"
+            android:padding="16dp"
             android:singleLine="false"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="40sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_number"
